--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-minimal
-
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: What is the title
+description: some shitng
