--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: What is the title
-description: some shitng
+title: Analysis and Prediction of 311 calls in San Francisco
+description: Liang Chen's personal project for the data incubator challenge
